src/runtime/runtime.h

/* Forward declarations */
typedef struct SplArray SplArray;
/* ===== Dynamic Array ===== */

struct SplArray {
    SplValue* items;
    int64_t   len;
    int64_t   cap;
};
int64_t  rt_ptr_read_u8(int64_t addr, int64_t offset);
int64_t  rt_ptr_write_bytes_raw(int64_t addr, int64_t offset, const void* src, int64_t len);
void*    rt_alloc(int64_t size);
void     rt_free(void* ptr);
void*    rt_memcpy(void* dst, const void* src, int64_t n);
void*    rt_memset(void* dst, int8_t val, int64_t n);
int64_t  rt_array_data_ptr(SplArray* array);
/* ===== Bit-cast Helpers (f64 <-> i64 for DynLoader) ===== */

int64_t  spl_f64_to_bits(double f);